[package]
name = "tapyrusd"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest tapyrusd process, useful in integration testing environment"
license = "MIT"
repository = "https://github.com/chaintope/tapyrusd"
documentation = "https://docs.rs/tapyrusd/"
rust-version = "1.56.1"
edition = "2018"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]

[dependencies]
tapyruscore-rpc = { git="https://github.com/chaintope/rust-tapyruscore-rpc", subdir = "client", features = ["rand"] }
log = "0.4"
which = "4.2.5"
anyhow = "1.0.66"
tempfile = "3"

[dev-dependencies]
env_logger = "0.9.0"

[build-dependencies]
bitcoin_hashes = { version = ">= 0.13, <= 0.14", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
minreq = { version = "2.9.1", default-features = false, features = [
    "https",
], optional = true }
zip = { version = "0.6", optional = true }
anyhow = "1.0.66"

[features]

# download is not supposed to be used directly only through selecting one of the version feature
"download" = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]

"0_5_2" = ["download", "0_5_1"]
"0_5_1" = ["download"]


"doc" = [] # used only for documentation building


[package.metadata.docs.rs]
features = ["download", "doc"]
rustdoc-args = ["--cfg", "docsrs"]
